<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MeetingDetailFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/meeting_header_image" />

    <!-- Icons -->
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="@dimen/action_icon_size"
        android:layout_height="@dimen/action_icon_size"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:tint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        android:id="@+id/back_action_button"
        android:layout_margin="@dimen/margin_one" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="@dimen/action_icon_size"
        android:layout_height="@dimen/action_icon_size"
        android:background="@android:color/transparent"
        android:tint="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/margin_one"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/edit_action_button"
        android:src="@drawable/ic_baseline_edit_24" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/meeting_header_image"
        android:background="@drawable/white_top_rounded"
        android:padding="@dimen/margin_one"
        android:layout_marginTop="-30dp">

        <!-- Meetings details -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_one">

            <!-- Meeting title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Discussion sur Mihawk"
                android:textStyle="bold"
                android:id="@+id/title_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/margin_two"
                android:textSize="@dimen/title_text_size" />

            <!-- Tags -->
            <to.imcurious.viewpro.ui.views.TagGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tags_list_layout"
                app:layout_constraintLeft_toLeftOf="@id/title_text"
                android:layout_marginTop="@dimen/margin_two"
                app:layout_constraintTop_toBottomOf="@id/title_text" />

            <!-- Date-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_corners_rounded"
                android:id="@+id/date_icon"
                app:layout_constraintTop_toBottomOf="@id/tags_list_layout"
                android:layout_marginTop="@dimen/margin_two"
                app:layout_constraintLeft_toLeftOf="@id/title_text"
                android:padding="@dimen/margin_one"
                android:src="@drawable/ic_baseline_calendar_today_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:id="@+id/date"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/date_icon"
                app:layout_constraintTop_toTopOf="@id/date_icon"
                android:layout_marginLeft="10dp"
                android:textColor="@color/gray_200"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/date"
                app:layout_constraintLeft_toLeftOf="@id/date"
                android:textStyle="bold"
                android:id="@+id/date_text"
                android:text="Vend, 27 Juin" />


            <!-- Time-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_icon"
                app:layout_constraintTop_toTopOf="@id/date_icon"
                app:layout_constraintLeft_toRightOf="@id/date_text"
                android:background="@drawable/secondary_corners_rounded"
                android:src="@drawable/ic_baseline_access_alarm_24"
                android:padding="@dimen/margin_one"
                android:layout_marginLeft="@dimen/margin_two" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:text="Heure"
                android:layout_marginLeft="10dp"
                app:layout_constraintTop_toTopOf="@id/time_icon"
                app:layout_constraintLeft_toRightOf="@id/time_icon"
                android:textSize="12sp"
                android:textColor="@color/gray_200"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/time"
                android:id="@+id/time_text"
                android:text="17:00 - 18:45"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/date_icon"
                app:layout_constraintLeft_toLeftOf="@id/title_text"
                android:text="@string/description"
                android:textSize="@dimen/normal_text_size"
                android:id="@+id/description_text"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_three" />


            <kr.co.prnd.readmore.ReadMoreTextView
                android:layout_width="0dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_height="wrap_content"
                app:readMoreColor="@color/colorPrimary"
                app:readMoreText="@string/read_more"
                android:text="Mihawk est un projet permettant de créer une suite de logiciels éducatifs à l'endroit des établissements de sorte que ces derniers puissent faire la gestion de leur établissement en utilisant les outlis du numérique. Actuellement, il est à la phase de développement."
                app:readMoreMaxLine="4"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintLeft_toLeftOf="@id/description_text"
                app:layout_constraintTop_toBottomOf="@id/description_text"
                android:id="@+id/description_description_text"
                android:textColor="@color/gray_300"
                android:layout_marginTop="@dimen/margin_one" />

            <to.imcurious.viewpro.ui.views.AvatarGroup
                android:id="@+id/avatar_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                app:layout_constraintTop_toBottomOf="@id/description_description_text"
                android:layout_marginTop="@dimen/margin_one"
                app:layout_constraintLeft_toLeftOf="@id/description_description_text"
                 />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/take_part_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/regular_edit_height"
                app:layout_constraintTop_toBottomOf="@id/avatar_container"
                android:layout_marginTop="@dimen/margin_two"
                android:background="@drawable/rounded_secondary"
                android:text="@string/take_part"
                android:textColor="@color/white" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>